--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: tuzepoito@gmail.com
 # description: >- # this means to ignore newlines until "baseurl:"
 description: Cédric Chartron's Dev Blog
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: https://tuzepoito.github.io # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kilehi1er
 github_username:  tuzepoito
 
